--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-template.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-template.css
@@ -456,7 +456,7 @@
   margin-top: 20px;
 }
 .rudder-template .one-col .main-details > .inner-portlet:first-child h3.page-title,
-.rudder-template .one-col .main-details > div > .inner-portlet:first-child h3.page-title {
+.rudder-template .one-col .main-details > div:first-child > .inner-portlet:first-child h3.page-title {
   margin-top: 0px;
 }
 .rudder-template .one-col .template-main .main-details{
